Fix venue menu on mobile

--- a/app/assets/stylesheets/_components.css.sass
+++ b/app/assets/stylesheets/_components.css.sass
@@ -49,6 +49,12 @@ header.header
       background: $background
       > a
         color: $accent
+    @media #{$small-only}
+      margin: 0 0 1rem
+      li
+        border-radius: 0
+        float: none
+        margin: 0
 
 
 footer.footer
